--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Space+Grotesk:wght@300..700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    font-family: "Space Grotesk", sans-serif;
 }
 
 body{
@@ -10,6 +13,10 @@ body{
 
 html{
     overflow: hidden;
+}
+
+h1{
+    justify-self: center;
 }
 
 .calculator{
@@ -38,7 +45,6 @@ html{
 
 .numbers-container{
     margin-top: 20px;
-    gap: 40px;
 }
 
 .number-button{
