--- a/styles.css
+++ b/styles.css
@@ -30,24 +30,44 @@ h1{
     transform: translate(-50%, -50%);
     text-align: center;
     width: 200px;
-    padding-bottom: 10px;
+    height: 460px;
     border-radius: 30px;
     background-color: rgb(34, 34, 34);
     gap: 10px;
 }
 
-.result-class{
-    text-align: right;
-    font-size: 50px;
+.display{
     width: 160px;
-    height: 50px;
+    height: 64px;
     background-color: white;
     margin: 20px;
-    display: block;
+}
+
+.result-class{
+    text-align: right;
+    font-size: 40px;
+}
+
+.calc-button{
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    border: none;
+    font-size: 20px;
+    background-color: aquamarine;
+}
+
+.calc-button:hover{
+    opacity: 0.7;
 }
 
 .numbers-container{
     margin-top: 20px;
+    justify-self: center;
+}
+
+.line{
+    margin-bottom: 10px;
 }
 
 .number-button{
@@ -59,5 +79,18 @@ h1{
 }
 
 .number-button:hover{
+    opacity: 0.7;
+}
+
+.equal-button{
+    width: 130px;
+    height: 50px;
+    border-radius: 10px;
+    border: none;
+    font-size: 40px;
+    background-color: aquamarine;
+}
+
+.equal-button:hover{
     opacity: 0.7;
 }
